--- a/public/styles/scss/base/_base.scss
+++ b/public/styles/scss/base/_base.scss
@@ -1,5 +1,6 @@
 // add base styles here
 @import '../theme/color-guide';
+@import '../theme/font-guide';
 // Modules
   // Components
   @import '../module/components/button-components';
