--- a/public/styles/scss/theme/_color-guide.scss
+++ b/public/styles/scss/theme/_color-guide.scss
@@ -4,5 +4,5 @@ $secondary-green: #009421;
 $accent-green: #3C5233;
 $main-grey: #666666;
 $stone-grey: #515052;
+$accent-grey: #8c8c8c;
 $primary-tan: #f5f0e7;
-$standard-font-weight: 700;
