--- a/views/includes/components/contact-section.pug
+++ b/views/includes/components/contact-section.pug
@@ -1,10 +1,10 @@
-#contact.offset
+#contact.mt-5
   footer
     .row.justify-content-center
       .col-md-5.text-center
-        p Let's talk about how we can accomplish your real estate goals, Lorem Ipsum all day I love Olympia and my service is unmatched
+        p.text-content Let's talk about how we can accomplish your real estate goals, Lorem Ipsum all day I love Olympia and my service is unmatched
         strong Contact Info
-        p Phone <br> Email
+        p (206) 471-9205 <br> bengaubert@greenerealty.com
         a(href="#" target="_blank")
           i(class=facebook_icon)
         a(href="#" target="_blank")
