--- a/views/includes/components/navigation.pug
+++ b/views/includes/components/navigation.pug
@@ -1,7 +1,7 @@
-nav.navbar.navbar-expand-lg.navbar-dark
+nav.navbar.navbar-expand-md.navbar-dark.navbar-nav
   .container
-    a.navbar-brand(href='#')
-      img(src="../styles/assets/img/BenGaubert.png" id="profile-pic")
+    a.navbar-brand(href='#') BEN GAUBERT
+      //- img(src="../styles/assets/img/BenGaubert.png" id="profile-pic")
     button.navbar-toggler.collapsed(type='button' data-toggle='collapse' data-target='#main-nav')
       span.menu-icon-bar
       span.menu-icon-bar
