--- a/views/includes/components/services.pug
+++ b/views/includes/components/services.pug
@@ -1,12 +1,11 @@
 .container-fluid.services-container
   .row.justify-content-center
-    .service-col.col-xl-4.mt-5.mb-30.ml-auto.pb-2
+    .service-col.col-xl-4.col-10.mt-5.mb-30.ml-lg-auto.pb-2
       .card.service-card
         a.post-thumb(href="#")
           img(src="../styles/assets/img/country-house.jpg")
         .service-card-body
-          h5.service-title
-            a(href="#") Empowering The Right Decision
+          h6.sub-title Empowering The Next Step
           #accordion
             .card
               #headingOne.card-header
@@ -16,7 +15,7 @@
                     i(class=plus_icon)
               #collapseOne.collapse(aria-labelledby='headingOne' data-parent='#accordion')
                 .card-body
-                  | Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven&apos;t heard of them accusamus labore sustainable VHS.
+                  p.text-content Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven&apos;t heard of them accusamus labore sustainable VHS.
             .card
               #headingTwo.card-header
                 h5.mb-0
@@ -25,6 +24,6 @@
                     i(class=plus_icon)
               #collapseTwo.collapse(aria-labelledby='headingTwo' data-parent='#accordion')
                 .card-body
-                  | Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven&apos;t heard of them accusamus labore sustainable VHS.
+                  p.text-content Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven&apos;t heard of them accusamus labore sustainable VHS.
     .col-xl-4.text-center.align-self-center.ml-auto.mr-auto
-      h1 Let's Accomplish Your Real Estate Goals
+      h1.little-title Let's Accomplish Your Real Estate Goals
