--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -1,15 +1,15 @@
 head
-  title= `Ben Gaubert, REALTOR`
+  meta(charset="UTF-8")
+  meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
   //- scripts
   script(src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js")
   script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js")
   script(src="../styles/bootstrap/dist/js/bootstrap.min.js")
   //- fonts, fontlibrary.com
-  //- Sans Serif - Perun Regular
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/perun" type="text/css"/>
-  //- Sans Serif - Renner
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/renner" type="text/css"/>
+  link(href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap" rel="stylesheet")
   //- stylesheets
   link(rel='stylesheet', href="../styles/bootstrap/dist/css/bootstrap.min.css")
   link(rel="stylesheet" href="../styles/css/app.css")  
   link(rel="stylesheet" href="../styles/css/styles.css")
+  //- 
+  title= `Ben Gaubert, REALTOR`
