--- a/views/includes/variables.pug
+++ b/views/includes/variables.pug
@@ -14,3 +14,5 @@
 - var envelope_icon = ['fa', 'fa-envelope']
 - var paperplane_icon = ['far', 'fa-paper-plane', 'ml-1']
 - var review_star_icon = ['fas', 'fa-star', 'fa-lg']
+- var fish_icon = ['fas', 'fa-fish', 'fa-lg']
+- var cooking_icon = ['fas', 'fa-utensils', 'fa-lg']
