--- a/public/styles/scss/module/_navigation-section.scss
+++ b/public/styles/scss/module/_navigation-section.scss
@@ -10,7 +10,6 @@
 }
 .navbar .navbar-brand {
   margin-left: 1rem;
-  font-family: 'Lobster', cursive;
   font-size: 2.5rem;
   img{
     height: 80px;
@@ -121,8 +120,8 @@
     margin-left: 20px;
   }
   .navbar-nav {
-    padding: 0 20px;
-    background-color: rgba(0, 0, 0, .9);
+    padding: 0 20px 10px;
+    background-color: rgba(0, 0, 0, 1);
   }
   .navbar.fixed-top .navbar-nav {
     background: transparent;
