--- a/views/includes/components/contact-cards.pug
+++ b/views/includes/components/contact-cards.pug
@@ -1,10 +1,10 @@
 .contact-container.card
-  h1.ml-auto.mr-auto.mt-5 A People First Approach
+  h1.little-title.ml-auto.mr-auto.mt-5 A People First Approach
   .row.align-items-center
     .col-lg-4.col-sm-12.ml-auto
-      .col-lg-10.col-sm-6.text-center.ml-auto.mr-auto
+      .col-lg-10.col-8.text-center.ml-auto.mr-auto.mt-4
         .row.text-left
-          p  No matter what your path or where you're from, I can help achieve your real estate goals with confidence and peace of mind. Local flavor with endless options. Achieving your real estate goals through relationships built on trust and communication.
+          p.text-content  No matter what your path or where you're from, I can help achieve your real estate goals with confidence and peace of mind. Local flavor with endless options. Achieving your real estate goals through relationships built on trust and communication.
         hr.clients-hr
-    .col-lg-4.col-sm-6.ml-auto.mr-auto
+    .col-lg-4.col-8.ml-auto.mr-auto
       include landing-reviews
