--- a/views/includes/components/landing.pug
+++ b/views/includes/components/landing.pug
@@ -1,12 +1,12 @@
 //- ====== LANDING IMAGE SECTION =======
 .container-fluid.two-col-container
   .row.two-col-content.justify-content-center
-    .col-xl-4.col-lg-4.col-sm-8.two-col-img-container.card
+    .col-lg-4.col-12.two-col-img-container.card
       .landing-img-container.mr-auto.ml-auto
         img(src="../styles/assets/img/client2.png" class="img-fluid landing-img")
       .card.landing-card.pb-2.mb-4
         .card-body.landing-card-body
-          h6 BEN GAUBERT
+          h6.sub-title.text-center.text-md-left BEN GAUBERT
           .landing-contacts
             ul
               li
@@ -21,11 +21,11 @@
                 i(class=page_icon)
                 span Office
                 a(href="#") 5000 Greene Way
-    .col-lg-6.col-sm-12.two-col-text-container.ml-auto.mr-auto
-      .col-lg-10.col-sm-12.text-center.ml-auto
-        h1 Your Guide To Thurston County Real Estate
-        .row.text-left
-          p Distinct natural beauty and a community second to none make Olympia an amazing place to call home. No matter what your path or where you're from, I can help achieve your real estate goals with confidence and peace of mind. Local flavor with endless options. Achieving your real estate goals through relationships built on trust and communication.
+    .col-lg-6.col-12.two-col-text-container.ml-auto.mr-auto
+      .col-lg-10.col-10.text-center.ml-auto.mr-auto
+        h1.big-title Your Guide To Thurston County Real Estate
+        .row.text-left.mt-4
+          p.text-content Distinct natural beauty and a community second to none make Olympia an amazing place to call home. No matter what your path or where you're from, I can help achieve your real estate goals with confidence and peace of mind. Local flavor with endless options. Achieving your real estate goals through relationships built on trust and communication.
         hr.clients-hr
         .col-12
           .row.justify-content-center
@@ -40,7 +40,3 @@
                 .col-auto.text-center
                   span.icon-span
                     img(src="../styles/assets/logos/linkedin.png" class="img-fluid landing-img-icon")
-        |
-        //- Landing Reviews
-        |
-        //- include landing-reviews
