--- a/views/index.pug
+++ b/views/index.pug
@@ -1,19 +1,18 @@
-doctype html
-html
-  head
-    title Ben Gaubert, REALTOR
-    include includes/head
+<!DOCTYPE html>
+html(lang="en")
+  include includes/head
+    meta(http-equiv="X-UA-Compatible", content="ie=edge")
   body(data-spy='scroll' data-target='#navbarResponsive')
     include includes/variables
     //- include includes/components/title
-    //- include includes/components/navigation
-    //- include includes/components/landing
-    //- include includes/components/contact-cards
+    include includes/components/navigation
+    include includes/components/landing
+    include includes/components/contact-cards
+    include includes/components/services
     include includes/components/portfolio
     //- include includes/components/accordion-section
     //- include includes/components/client-jumbotron
     //- include includes/components/description-banner
-    //- include includes/components/services
-    //- include includes/components/contact-section
+    include includes/components/contact-section
     //- include includes/components/client-carousel
     include includes/scripts
